Updating "Manage stage" Product PM to Urvi Chetta

--- a/data/stages.yml
+++ b/data/stages.yml
@@ -34,7 +34,7 @@ stages:
       - "secure"
       - "govern"
     section: dev
-    pm: Orit Golowinski
+    pm: Urvi Chetta
     em:
       - Michelle Gill
     groups:
