Update Arturo Herrero reporting

--- a/data/team_members/person/a/arturo-herrero.yml
+++ b/data/team_members/person/a/arturo-herrero.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/management/fullstack-manager/">Engineering
   Manager</a>, Manage:Integrations
-reports_to: dsatcher
+reports_to: michellegill
 picture: arturo-herrero.jpg
 twitter: ArturoHerrero
 gitlab: arturoherrero
