--- a/data/release_posts/15_5/mvp.yml
+++ b/data/release_posts/15_5/mvp.yml
@@ -13,12 +13,8 @@ mvp:
     to the [`gitlab-docs` project](https://gitlab.com/gitlab-org/gitlab-docs) during this milestone. The `gitlab-docs` project is responsible for taking content from many of our
     projects and publishing it to <https://docs.gitlab.com>.
 
-    Anatoli's contributions to `gitlab-docs` during this milestone include:
-
-    - Improving [code quality](https://gitlab.com/gitlab-org/gitlab-docs/-/merge_requests/3098).
-    - Adding [Ruby code coverage support](https://gitlab.com/gitlab-org/gitlab-docs/-/merge_requests/3158).
-    - Squashing [a bug](https://gitlab.com/gitlab-org/gitlab-docs/-/issues/1232) related to launching GitPod.
+    Anatoli's contributions to `gitlab-docs` during this milestone include improving [code quality](https://gitlab.com/gitlab-org/gitlab-docs/-/merge_requests/3098), adding [Ruby code coverage support](https://gitlab.com/gitlab-org/gitlab-docs/-/merge_requests/3158), and squashing [a bug](https://gitlab.com/gitlab-org/gitlab-docs/-/issues/1232) related to launching GitPod.
 
     Thank you Anatoli for all your contributions!
 
-    Your nominator had this to say: "It's been excellent to have some engineering help from the community." Agreed! Thank you Anatoli for all of your contributions.
+    Your nominator had this to say: "It's been excellent to have some engineering help from the wider community." Agreed! Thank you Anatoli for all of your contributions.
