Revert sunsetting of devops tools page

--- a/data/redirects.yml
+++ b/data/redirects.yml
@@ -4214,8 +4214,7 @@
     - /devops-tools/pdfs/zoho-sprints-vs-gitlab.html
     - /devops-tools/zoho-sprints-vs-gitlab.html
     - /devops-tools/zoho-sprints-vs-gitlab/
-    - /devops-tools/
-  target: /competition/
+  target: /devops-tools/
   comp_op: '='
 - sources:
     - /training
