Update adamsmolinski.yml to - Product Team

--- a/data/team_members/person/a/adamsmolinski.yml
+++ b/data/team_members/person/a/adamsmolinski.yml
@@ -8,7 +8,7 @@ picture: adamsmolinski.jpg
 twitter: 
 gitlab: asmolinski2
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - UX Research Team
 story: 'For the last 20+ years, Adam has been doing what he loves: improving user
