Update leducmills.yml to - Product Team

--- a/data/team_members/person/l/leducmills.yml
+++ b/data/team_members/person/l/leducmills.yml
@@ -10,7 +10,7 @@ twitter:
 linkedin: benleducmills
 gitlab: leducmills
 departments:
-  - Engineering Function
+  - Product Team
   - UX Department
   - UX Research Team
 specialty: 
