Update enf.yml to - Product Team

--- a/data/team_members/person/e/enf.yml
+++ b/data/team_members/person/e/enf.yml
@@ -10,7 +10,7 @@ twitter:
 linkedin: erikanfeldman
 gitlab: enf
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - UX Research Team
 specialty: 
