--- a/data/team_members/person/m/moliver28.yml
+++ b/data/team_members/person/m/moliver28.yml
@@ -10,7 +10,7 @@ twitter:
 linkedin: michaeleoliver
 gitlab: moliver28
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - UX Research Team
 specialty: 
