Update annelasch.yml to - Product Team

--- a/data/team_members/person/a/annelasch.yml
+++ b/data/team_members/person/a/annelasch.yml
@@ -10,7 +10,7 @@ pronunciation:
 twitter: 
 gitlab: alasch
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - UX Research Team
 expertise: 
