Added info to team member page

--- a/data/team_members/person/d/dchangkuon.yml
+++ b/data/team_members/person/d/dchangkuon.yml
@@ -3,7 +3,7 @@ locality:
 country: Remote
 role: <a href="">Senior Security Assurance Engineer</a>
 reports_to: corey-oas
-picture: ../gitlab-logo-extra-whitespace.png
+picture: danielchangkuon.jpg
 pronouns:
 pronunciation:
 twitter:
