Update gitlab handle of Ian Murray

--- a/data/team_members/person/m/murray362.yml
+++ b/data/team_members/person/m/murray362.yml
@@ -10,7 +10,7 @@ projects:
   gitlab-observability-ui: maintainer
 twitter:
 linkedin:
-gitlab: murray362
+gitlab: ian.murray
 departments:
   - Development
 specialty: "Monitor:Observability"
