Revise the Cloud Seed links

--- a/data/release_posts/15_5/incubation-deploy-apps-to-google-cloud-cloud-seed.yml
+++ b/data/release_posts/15_5/incubation-deploy-apps-to-google-cloud-cloud-seed.yml
@@ -22,7 +22,6 @@ features:
 
       Learn more:
 
-      - [Documentation](https://docs.gitlab.com/ee/cloud_seed/index.html)
+      - [Read the documentation](https://docs.gitlab.com/ee/cloud_seed/index.html)
       - [Accelerate cloud adoption with Cloud Seed](https://about.gitlab.com/blog/2022/10/11/accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud/)
-      - [Become a Cloud Seed Trusted Tester](https://docs.google.com/forms/d/e/1FAIpQLSeJPtFE8Vpqs_YTAKkFK42p5mO9zIYA2jr_PiP2h32cs8R39Q/viewform)
       - [Follow development on the Issue Board](https://gitlab.com/groups/gitlab-org/incubation-engineering/five-minute-production/-/boards)
