Update handbook pages for Carrie Kroutil

--- a/data/team_members/person/c/ckroutil.yml
+++ b/data/team_members/person/c/ckroutil.yml
@@ -10,8 +10,12 @@ twitter:
 linkedin:
 gitlab: ckroutil
 departments:
-  - Development
-specialty: ""
+- Engineering Function
+- Development Department
+- Ops Section
+- Package Stage
+- Package:Package Registry Group
+specialty: Package
 expertise:
 story:
 
