--- a/data/team_members/person/d/dmeshcharakou.yml
+++ b/data/team_members/person/d/dmeshcharakou.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend
   Engineer, Package:Package Registry</a>
-reports_to: michelletorres
+reports_to: ckroutil
 picture: dmeshcharakou.png
 pronouns: he/him
 pronunciation:
