--- a/data/team_members/person/d/davidfernandez.yml
+++ b/data/team_members/person/d/davidfernandez.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend
   Engineer, Package:Package Registry</a>
-reports_to: michelletorres
+reports_to: ckroutil
 picture: davidfernandez.png
 twitter: 10io
 gitlab: 10io
