Update TW yml files to reflect Product

--- a/data/team_members/person/a/amyqualls.yml
+++ b/data/team_members/person/a/amyqualls.yml
@@ -13,10 +13,9 @@ pronouns: she/her
 pronunciation: A-mee kwahls, or <a href="http://ipa-reader.xyz/?text=e%C9%AA.mi%20q%CC%9F%CA%89%C3%A4lls">/eɪ.mi
   q̟ʉälls/ (audio link)</a>
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
-- Create:Code Review
 projects:
   gitlab: maintainer docs
   gitlab-docs: maintainer
