--- a/data/team_members/person/a/ashrafkhamis.yml
+++ b/data/team_members/person/a/ashrafkhamis.yml
@@ -12,7 +12,7 @@ twitter:
 linkedin: ashrafkhamis
 gitlab: ashrafkhamis
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
