--- a/data/team_members/person/c/christielenneville.yml
+++ b/data/team_members/person/c/christielenneville.yml
@@ -14,7 +14,7 @@ departments:
 - UX Department
 - Product Design
 - Technical Writing
-- UX Research Team
+- UX Research
 story: |
   After graduating with a psychology degree in the late 90s, Christie quickly
   realized her passion was technology. That was before "UX" was really a thing, so
