--- a/data/team_members/person/c/claytoncornell.yml
+++ b/data/team_members/person/c/claytoncornell.yml
@@ -11,7 +11,7 @@ twitter:
 linkedin: smaug42
 gitlab: claytoncornell
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
