--- a/data/team_members/person/d/dianalogan.yml
+++ b/data/team_members/person/d/dianalogan.yml
@@ -10,7 +10,7 @@ twitter:
 linkedin:
 gitlab: dianalogan
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
