--- a/data/team_members/person/e/eread.yml
+++ b/data/team_members/person/e/eread.yml
@@ -9,7 +9,7 @@ picture: evanread.jpg
 twitter:
 gitlab: eread
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
