--- a/data/team_members/person/f/fneill.yml
+++ b/data/team_members/person/f/fneill.yml
@@ -12,7 +12,7 @@ twitter:
 linkedin: fneill
 gitlab: fneill
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
