--- a/data/team_members/person/j/jglassman1.yml
+++ b/data/team_members/person/j/jglassman1.yml
@@ -10,7 +10,7 @@ twitter:
 linkedin: jonathan-glassman-39b13541
 gitlab: jglassman1
 departments:
-  - Engineering Function
+  - Product Team
   - UX Department
   - Technical Writing
 projects:
