--- a/data/team_members/person/k/kpaizee.yml
+++ b/data/team_members/person/k/kpaizee.yml
@@ -11,7 +11,7 @@ twitter:
 linkedin:
 gitlab: kpaizee
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
