--- a/data/team_members/person/l/lciutacu.yml
+++ b/data/team_members/person/l/lciutacu.yml
@@ -10,7 +10,7 @@ twitter:
 linkedin: lorena-ciutacu
 gitlab: lciutacu
 departments:
-  - Engineering Function
+  - Product Team
   - UX Department
   - Technical Writing
 projects:
