--- a/data/team_members/person/r/russelldickenson.yml
+++ b/data/team_members/person/r/russelldickenson.yml
@@ -9,7 +9,7 @@ picture: russelldickenson.png
 twitter: rjdickenson
 gitlab: rdickenson
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
