--- a/data/team_members/person/s/suzanneselhorn.yml
+++ b/data/team_members/person/s/suzanneselhorn.yml
@@ -10,7 +10,7 @@ twitter:
 gitlab: sselhorn
 pronouns: she/her
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Technical Writing
 projects:
