--- a/data/team_members/person/i/igorman.yml
+++ b/data/team_members/person/i/igorman.yml
@@ -11,6 +11,9 @@ linkedin: irisgorman
 gitlab: igorman
 departments:
   - Legal & Corporate Affairs
+  - Dev Section Legal & Corporate Affairs Stable Counterpart
+  - SaaS Platforms Section Legal & Corporate Affairs Stable Counterpart
+  - Sec Section Legal & Corporate Affairs Stable Counterpart
 specialty: 
 expertise:
 story:
