--- a/data/team_members/person/s/smccreesh.yml
+++ b/data/team_members/person/s/smccreesh.yml
@@ -11,6 +11,7 @@ linkedin:
 gitlab: smccreesh
 departments:
   - Legal & Corporate Affairs
+  - Fulfillment Section Legal & Corporate Affairs Stable Counterpart
 specialty: "Privacy and Product"
 expertise:
 story: Sarah is an internet law and policy specialist, with a diverse background in data protection, EU legal/policy analysis, and top-level internet domain management (including dispute resolution). Based in Ireland with her husband and two cats, she unwinds by walking on the local beach, reading, watching action movies, and travelling.
