--- a/data/team_members/person/t/tichen.yml
+++ b/data/team_members/person/t/tichen.yml
@@ -11,6 +11,9 @@ linkedin: tiffany-chen-5767564b
 gitlab: tichen
 departments:
   - Legal & Corporate Affairs
+  - Ops Section Legal & Corporate Affairs Stable Counterpart
+  - Data Science Section Legal & Corporate Affairs Stable Counterpart
+  - Growth Section Legal & Corporate Affairs Stable Counterpart
 specialty: ""
 expertise:
 story:
