--- a/data/team_members/person/h/huzaifaiftikhar1.yml
+++ b/data/team_members/person/h/huzaifaiftikhar1.yml
@@ -21,6 +21,7 @@ projects:
   gitlab:
   - maintainer backend
   - reviewer database
+  gitlab-cli: reviewer
 specialty: Compliance
 expertise:
 story:
