--- a/data/team_members/person/e/ezekiel-k.yml
+++ b/data/team_members/person/e/ezekiel-k.yml
@@ -21,6 +21,7 @@ expertise: '<li>Merge request <a href="/job-families/expert/merge-request-coach/
 projects:
   gitlab: maintainer frontend
   gitlab-ui: reviewer frontend
+  gitlab-cli: reviewer
 story: 'Ezekiel is a Frontend Engineer, while primarily working with javascript he
   has experience in a range of languages enjoying the thrills of learning and understanding
   the sometimes strange, but interesting ways computers are becoming part of our lives.
