Update security-report-schemas maintainer format

--- a/data/team_members/person/b/bwill.yml
+++ b/data/team_members/person/b/bwill.yml
@@ -47,5 +47,5 @@ projects:
   gitlab-runner: reviewer
   secure-container-scanning: maintainer backend
   sec-danger-bot: maintainer backend
-  security-report-schemas: reviewer backend
+  security-report-schemas: reviewer
 
