--- a/data/team_members/person/m/mehmet-inac.yml
+++ b/data/team_members/person/m/mehmet-inac.yml
@@ -15,7 +15,7 @@ projects:
   - maintainer backend
   - reviewer backend
   security-report-schemas:
-  - trainee_maintainer backend
+  - trainee_maintainer
 domain_expertise:
 - ruby
 - rails
