--- a/data/team_members/person/m/michal-zajac.yml
+++ b/data/team_members/person/m/michal-zajac.yml
@@ -32,7 +32,7 @@ projects:
   - reviewer database
   - reviewer backend
   security-report-schemas:
-  - trainee_maintainer backend
+  - trainee_maintainer
 domain_expertise:
 - rails
 - govern
