--- a/data/team_members/person/i/igorfrenkel.yml
+++ b/data/team_members/person/i/igorfrenkel.yml
@@ -18,7 +18,7 @@ projects:
   secure-DS-gemnasium-python: maintainer backend
   secure-LC-license-finder: reviewer backend
   secure-container-scanning: reviewer backend
-  security-report-schemas: trainee_maintainer backend
+  security-report-schemas: trainee_maintainer
 story: 'Igor is Backend Engineer from Toronto, Canada. He is passionate about engineering
   craftsmanship and secure software. In his spare time he likes to read scifi, listen
   to podcasts, and rock climb.
