Update Courtney and Donique assignments

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -584,7 +584,7 @@ sites/handbook/source/handbook/marketing/corporate-marketing/corporate-communica
 /source/direction/fulfillment/utilization/ @doniquesmit
 /source/direction/fulfillment/purchase/ @alex_martin
 /source/direction/fulfillment/provision/ @courtmeddaugh
-/source/direction/fulfillment/commerce-integrations/ @isandin
+/source/direction/fulfillment/commerce-integrations/ @courtmeddaugh
 /source/direction/fulfillment/fulfillment-admin-tools/ @doniquesmit
 /source/direction/fulfillment/platform/ @jameslopez @tgolubeva
 /source/direction/fulfillment/billing-and-subscription-management/ @tgolubeva
