Make Drew Blessing GitLab backend maintainer

--- a/data/team_members/person/d/drew-b.yml
+++ b/data/team_members/person/d/drew-b.yml
@@ -24,7 +24,7 @@ story: |
 domain_expertise:
 - manage
 projects:
-  gitlab: trainee_maintainer backend
+  gitlab: maintainer backend
   rouge: maintainer
 specialty:
 - 'Manage: Authentication and Authorization'
